# dna-ledger-vault

./: .env.example  .github-validation-checklist.md  .gitignore  DEMO.md  ETHEREUM-BRIDGE-SUMMARY.md  Makefile  PHASE2_SUMMARY.md  PROPRIETARY-NOTICE.md  README.md  RELEASE_NOTES.md  UPDATE-SUMMARY.md  foundry.toml  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  validate_phase2.py
.github/workflows/: boundary_gate.yml  ci.yml
api/: server.py
api/v2/: __init__.py  observability.py
cli/: main.py  onboarding.py
contracts/script/: Deploy.s.sol
dashboard/: index.html
deployment/: Dockerfile  aws-ecs-task-definition.json  azure-container-instances.yaml  docker-compose.yml  gcp-cloud-run.yaml  nginx.conf
dna_ledger/: __init__.py  erasure_models.py  ga4gh_models.py  hashing.py  ledger.py  merkle_proof.py  models.py  rfc6979.py  signing.py
docs/: AUDIT.md  CLAIMS_REGISTER.md  CRYPTO_UPGRADES.md  DEPLOYMENT-ETH.md  DEPLOYMENT.md  ENGINEERING-TODO-2026-01-15.md  ETHICS-PROBABILISTIC-DISTANCE.md  GA4GH-PASSPORT-INTEGRATION.md  GEO-COMMIT-SPEC.md  GEO-PHASE.md  GLOSSARY.md  NON_CLAIMS.md  PQ_ROADMAP.md  REGULATOR-SUMMARY.md  RFC6979-IMPLEMENTATION.md  RFC6979-NONCE-POLICY.md  RIGHT_TO_ERASURE.md  SCALAR_WAZE_BOUNDARY.md  SECURITY.md  STATE-MIXER-FK.md  THREAD-2026-01-15.md  THREAT-MODEL-ETH.md  V0_2_DESIGN_NOTES.md  WEB_DASHBOARD.md  WHAT-THIS-IS-NOT.md  ZK-TELEPORT-OPTION-A.md
examples/: geophase_signing_example.py
geophase_eth/: __init__.py  chain_check.py  deploy.py  example.py  geocommit.py
onboarding/: __init__.py  compliance_templates.py  wizard.py
samples/: result.json  sample.vcf
scripts/: status.sh  verify-docs.sh
tests/: test_crypto_schemes.py  test_dashboard_api.py  test_erasure.py  test_ga4gh_passports.py  test_invariants.py  test_phase2_invariants.py  test_rfc6979_vectors.py
tools/: check_boundaries.py
vault/: crypto.py  erasure_manager.py  passport_issuer.py  pq_crypto.py  store.py  wrap.py
(+13 files in other folders)
